@@ -1,7 +1,8 @@
 # no-gather
 
 Resources accumulate over time, women are champions, and on random
-maps players start with about 50 infantry.
+maps players start with about 50 infantry. Town and city phase
+upgrades are fast and free.
 
 (a mod for [0ad](https://play0ad.com/))
 
