@@ -5,8 +5,8 @@
 	},
 	"description": "Advances from a bustling town to a veritable metropolis, full of the wonders of modern technology. This is the Athenian city phase, where metal gathering rates are boosted because of the 'Silver Owls' bonus.",
 	"cost": {
-		"stone": 750,
-		"metal": 750
+		"stone": 0,
+		"metal": 0
 	},
 	"requirements": {
 		"entity": {
@@ -18,7 +18,7 @@
 	"supersedes": "phase_town_athen",
 	"replaces": ["phase_city"],
 	"icon": "city_phase.png",
-	"researchTime": 60,
+	"researchTime": 1,
 	"tooltip": "Advance to City Phase, which unlocks more entities and technologies. Civic Centers +50% territory influence radius. Structures +9 capture points regeneration rate per garrisoned unit. Workers +10% metal gather rate.",
 	"modifications": [
 		{ "value": "Capturable/GarrisonRegenRate", "add": 9, "affects": "Structure" },
