@@ -9,8 +9,8 @@
 	},
 	"description": "Advances from a bustling town to a veritable metropolis, full of the wonders of modern technology.",
 	"cost": {
-		"stone": 750,
-		"metal": 750
+		"stone": 0,
+		"metal": 0
 	},
 	"requirements": {
 		"entity": {
@@ -22,7 +22,7 @@
 	"supersedes": "phase_town_generic",
 	"replaces": ["phase_city"],
 	"icon": "city_phase.png",
-	"researchTime": 60,
+	"researchTime": 1,
 	"tooltip": "Advance to City Phase, which unlocks more entities and technologies. Civic Centers +50% territory influence radius. Structures +9 capture points regeneration rate per garrisoned unit.",
 	"modifications": [
 		{ "value": "Capturable/GarrisonRegenRate", "add": 9, "affects": "Structure" },
