@@ -5,8 +5,8 @@
 	},
 	"description": "Advances from a small village to a bustling town, ready to expand rapidly. This is the Athenian town phase, where metal gathering rates are boosted because of the 'Silver Owls' bonus.",
 	"cost": {
-		"food": 500,
-		"wood": 500
+		"food": 0,
+		"wood": 0
 	},
 	"requirements": {
 		"entity": {
@@ -18,7 +18,7 @@
 	"supersedes": "phase_village",
 	"replaces": ["phase_town"],
 	"icon": "town_phase.png",
-	"researchTime": 30,
+	"researchTime": 1,
 	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +30% territory influence radius. Structures +7 capture points regeneration rate per garrisoned unit. Workers +10% metal gather rate.",
 	"modifications": [
 		{ "value": "Capturable/GarrisonRegenRate", "add": 7, "affects": "Structure" },
