@@ -9,8 +9,8 @@
 	},
 	"description": "Advances from a small village to a bustling town, ready to expand rapidly.",
 	"cost": {
-		"food": 500,
-		"wood": 500
+		"food": 0,
+		"wood": 0
 	},
 	"requirements": {
 		"entity": {
@@ -22,7 +22,7 @@
 	"supersedes": "phase_village",
 	"replaces": ["phase_town"],
 	"icon": "town_phase.png",
-	"researchTime": 30,
+	"researchTime": 1,
 	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +30% territory influence radius. Structures +7 capture points regeneration rate per garrisoned unit.",
 	"modifications": [
 		{ "value": "Capturable/GarrisonRegenRate", "add": 7, "affects": "Structure" },
