@@ -2,8 +2,8 @@
 	"genericName": "Town Phase",
 	"description": "Advances from a small village to a bustling town, ready to expand rapidly. This is the Persian town phase, where stable training rates are decreased because of the 'Times of War' bonus.",
 	"cost": {
-		"food": 500,
-		"wood": 500
+		"food": 0,
+		"wood": 0
 	},
 	"requirements": {
 		"entity": {
@@ -15,7 +15,7 @@
 	"supersedes": "phase_village",
 	"replaces": ["phase_town"],
 	"icon": "town_phase.png",
-	"researchTime": 30,
+	"researchTime": 1,
 	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +30% territory influence radius. Structures +7 capture points regeneration rate per garrisoned unit. Stable −10% batch training time.",
 	"modifications": [
 		{ "value": "Capturable/GarrisonRegenRate", "add": 7, "affects": "Structure" },
